# RossaliniChat

./: .dockerignore  .gitignore  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
.opencode/: opencode.json  package-lock.json
app/: main.py
app/api/: routes.py
app/models/: ai_engine.py
app/presenters/: chat_presenter.py
app/services/: chat_service.py
app/views/: main_window.py
backend/: README.md  recursos.txt  response.json  response.txt
backend/app/: main.py
backend/app/api/: routes.py  schemas.py
backend/app/core/: config.py
backend/app/models/: ai_engine.py  image_processor.py
backend/tests/: test_integration_live.py  test_suite.py
frontend/: package.json
frontend/src/app/: layout.tsx
frontend/src/app/analyze/: page.tsx
frontend/src/components/analyze/: ImageUploader.tsx  TextContextInput.tsx
frontend/src/components/landing/: HeroSection.tsx
frontend/src/components/results/: LoadingSkeleton.tsx  ModeCard.tsx  ResultsGrid.tsx
frontend/src/components/theme/: ThemeToggle.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/styles/: globals.css
tests/: test_suite.py
