[project]
name = "rossalinichat"
version = "0.2.0"
description = "API backend de RossaliniChat — Genera respuestas con IA según arquetipos de interacción."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pillow>=10.3.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]
